@startuml

class MaterialBiblioteca {
  - codigo: string
  - ubicacion: string
  # titulo: string
  # anioPublicacion: int
  # disponible: bool
  + MaterialBiblioteca(cod, tit, ubi, anio)
  + ~MaterialBiblioteca()
  + mostrarInfo() : void
}

class Libro {
  - autor: string
  - numPaginas: int
  - genero: string
  + Libro(...)
  + ~Libro()
  + mostrarInfo() : void
}

class Revista {
  - editorial: string
  - numero: int
  - mesPublicacion: int
  + Revista(...)
  + ~Revista()
  + mostrarInfo() : void
}

class GestorPrestamos {
  + registrarPrestamo(material: MaterialBiblioteca, usuario: string) : void
  + procesarDevolucion(material: MaterialBiblioteca) : void
}

Libro --|> MaterialBiblioteca
Revista --|> MaterialBiblioteca
GestorPrestamos .. MaterialBiblioteca : friend

@enduml
